Fixed scrollbar

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -245,6 +245,9 @@
                 overflow-x: hidden
                 display: block
 
+                &::-webkit-scrollbar
+                    width: 0
+
                 section
                     width: 100%
                     display: block
