--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -422,6 +422,7 @@ html
             display: flex
             transform-origin: bottom
             transition: transform $menu-open-animation
+            box-sizing: content-box
 
             .ps__rail-x
                 display: none !important
